--- a/thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -2,10 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<meta charset="ISO-8859-1">
-<title>Thymeleaf Demo</title>
+	<meta charset="ISO-8859-1">
+	<title>Thymeleaf Demo</title>
+	<link rel="stylesheet" th:href="@{/css/demo.css}" />
 </head>
+
 <body>
-	<p th:text="'Time on the server is ' + ${theDate}" />
+	<p th:text="'Time on the server is ' + ${theDate}" class="funny" />
 </body>
 </html>
