--- a/thymeleafdemo-helloworld/src/main/resources/templates/list-employees.html
+++ b/thymeleafdemo-helloworld/src/main/resources/templates/list-employees.html
@@ -2,25 +2,36 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
 <title>Employee Directory</title>
 </head>
 <body>
+<div class="container">
 	<h3>Employee Directory</h3>
 	<hr>
-	<table border="1">
-		<thead>
+	<table class="table table-bordered table-striped">
+		<thead class="thead-dark">
 		<tr>
 			<th>First Name</th>
 			<th>Last Name</th>
 			<th>Email Name</th>
 		</tr>
 		</thead>
+		<tbody>
 			<tr th:each="tempEmployee : ${employees}">
 				<td th:text="${tempEmployee.firstName}"/>
 				<td th:text="${tempEmployee.lastName}"/>
 				<td th:text="${tempEmployee.email}"/>
-			</tr>	
+			</tr>
+		</tbody>
 	</table>
+</div>
 
 </body>
 </html>
